finish GPS Attendance page

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1308,6 +1308,10 @@
   "boilerplate.containers.Payroll.Attendance.totalWorking": "Total Working",
   "boilerplate.containers.Payroll.Attendance.trainingPeriodHasBalance": "Calculated as Leave Balance",
   "boilerplate.containers.Payroll.Attendance.transportaion": "Transportaion",
+  "boilerplate.containers.Payroll.Attendance.In": "In",
+  "boilerplate.containers.Payroll.Attendance.Out": "Out",
+  "boilerplate.containers.Payroll.Attendance.outOfTheRangeMesss": "Out Of The Range",
+  "boilerplate.containers.Payroll.Attendance.GPSAttendance": "GPS Attendance",
   "boilerplate.containers.Payroll.Attendance.transportationExpenses": "Transportation",
   "boilerplate.containers.Payroll.Attendance.transportationType": "Transportation Type",
   "boilerplate.containers.Payroll.Attendance.TrnsportaionEle": "Transportation allowance",
