--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1308,6 +1308,10 @@
   "boilerplate.containers.Payroll.Attendance.totalWorking": "عدد العاملين",
   "boilerplate.containers.Payroll.Attendance.trainingPeriodHasBalance": "يحتسب رصيد اجازات",
   "boilerplate.containers.Payroll.Attendance.transportaion": "مواصلات",
+  "boilerplate.containers.Payroll.Attendance.In": "حضور",
+  "boilerplate.containers.Payroll.Attendance.Out": "انصراف",
+  "boilerplate.containers.Payroll.Attendance.outOfTheRangeMesss": "خارج النطاق",
+  "boilerplate.containers.Payroll.Attendance.GPSAttendance": "تسجيل بصمة الحضور والانصراف",
   "boilerplate.containers.Payroll.Attendance.transportationExpenses": "الانتقالات",
   "boilerplate.containers.Payroll.Attendance.transportationType": "نوع النقل",
   "boilerplate.containers.Payroll.Attendance.TrnsportaionEle": "بدل انتقال مأموريات",
