--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -1730,7 +1730,7 @@
   "boilerplate.containers.Payroll.HumanResources.courseName": "قوة العمالة المخططه",
   "boilerplate.containers.Payroll.HumanResources.courseType": "نوع الدورة",
   "boilerplate.containers.Payroll.HumanResources.createPenaltyTitle": "اضافة جزاء",
-  "boilerplate.containers.Payroll.HumanResources.createRewardTitle": "اضافة مكافئات الموظفين",
+  "boilerplate.containers.Payroll.HumanResources.createRewardTitle": "اضافة جزاءات الموظفين",
   "boilerplate.containers.Payroll.HumanResources.custodies": "العهد",
   "boilerplate.containers.Payroll.HumanResources.CustodyDeliveryCreateTitle": "اضافة تسليم عهدة",
   "boilerplate.containers.Payroll.HumanResources.CustodyDeliveryEditTitle": "تعديل تسليم عهده",
@@ -1776,7 +1776,7 @@
   "boilerplate.containers.Payroll.HumanResources.mobileNumber": "رقم الهاتف",
   "boilerplate.containers.Payroll.HumanResources.month": "شهرى",
   "boilerplate.containers.Payroll.HumanResources.monthName": "الشهر",
-  "boilerplate.containers.Payroll.HumanResources.NewsCreateTitle": "اضافة اخبار واعلاتات",
+  "boilerplate.containers.Payroll.HumanResources.NewsCreateTitle": "اضافة اخبار واعلانات",
   "boilerplate.containers.Payroll.HumanResources.NewsUpdateTitle": "تعديل اخبار واعلانات",
   "boilerplate.containers.Payroll.HumanResources.note": "ملاجظات",
   "boilerplate.containers.Payroll.HumanResources.oldElemVal": "القيمة السابقة",
