finish customer , contract , project, stage, timesheet pages, change translate in dashboard page , ide columns in leaves balance page

--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -2965,5 +2965,66 @@
   "boilerplate.containers.Users.Greeting.subtitle": "سجل فقط للانضمام إلينا",
   "boilerplate.containers.Users.Greeting.title": "مرحبًا ، سعدت بلقائك",
   "boilerplate.containers.Users.Welcome.subtitle": "من فضلك سجل دخولك للمتابعة",
-  "boilerplate.containers.Users.Welcome.title": "مرحبا بك في"
+  "boilerplate.containers.Users.Welcome.title": "مرحبا بك في",
+
+  "boilerplate.containers.Payroll.projectManagment.createProject": "انشاء مشروع",
+  "boilerplate.containers.Payroll.projectManagment.editProject": "تعديل مشروع",
+  "boilerplate.containers.Payroll.projectManagment.ProjectCode": "كود المشروع",
+  "boilerplate.containers.Payroll.projectManagment.ProjectType": "طبيعة المشروع",
+  "boilerplate.containers.Payroll.projectManagment.Contract": "التعاقد",
+  "boilerplate.containers.Payroll.projectManagment.expectedWorkHours": "ساعات العمل المتوقعة",
+  "boilerplate.containers.Payroll.projectManagment.expectedCost": "التكلفة المتوقعة",
+  "boilerplate.containers.Payroll.projectManagment.expectedStartDate": "تاريخ البداية المتوقع",
+  "boilerplate.containers.Payroll.projectManagment.expectedEndDate": "تاريخ الانتهاء المتوقع",
+  "boilerplate.containers.Payroll.projectManagment.actualWorkHours": "عدد ساعات المشروع الفعلية",
+  "boilerplate.containers.Payroll.projectManagment.actualCost": "تكلفة المشروع الفعلية",
+  "boilerplate.containers.Payroll.projectManagment.profitMargin": "هامش الربح",
+  "boilerplate.containers.Payroll.projectManagment.Stage": "المرحلة",
+  "boilerplate.containers.Payroll.projectManagment.Stages": "المراحل",
+  "boilerplate.containers.Payroll.projectManagment.startDate": "تاريخ البدء",
+  "boilerplate.containers.Payroll.projectManagment.endDate": "تاريخ الانتهاء",
+  "boilerplate.containers.Payroll.projectManagment.stageWorkHours": "ساعات عمل المرحلة",
+  "boilerplate.containers.Payroll.projectManagment.Tasks": "المهام",
+  "boilerplate.containers.Payroll.projectManagment.TaskCode": "كود المهمة",
+  "boilerplate.containers.Payroll.projectManagment.TaskNameEN": "اسم المهمة بالانجليزية",
+  "boilerplate.containers.Payroll.projectManagment.TaskNameAR": "اسم المهمة بالعربية",
+  "boilerplate.containers.Payroll.projectManagment.TaskWorkHours": "ساعات عمل المهمة",
+  "boilerplate.containers.Payroll.projectManagment.organization": "الادارة",
+  "boilerplate.containers.Payroll.projectManagment.Job": "الوظيفى",
+  "boilerplate.containers.Payroll.projectManagment.ProjectName": "اسم المشروع",
+  "boilerplate.containers.Payroll.projectManagment.customerName": "اسم العميل",
+  "boilerplate.containers.Payroll.projectManagment.youMustToAddTasks": "يجب ان تختار مهام",
+  "boilerplate.containers.Payroll.projectManagment.customerCode": "كود العميل",
+  "boilerplate.containers.Payroll.projectManagment.accountManagerName": "اسم مدير الحساب",
+  "boilerplate.containers.Payroll.projectManagment.accountManagerMobileNumber": "رقم هاتف مدير الحساب",
+  "boilerplate.containers.Payroll.projectManagment.editCustomer": "تعديل العميل",
+  "boilerplate.containers.Payroll.projectManagment.createCustomer": "إنشاء العميل",
+  "boilerplate.containers.Payroll.projectManagment.customerNameEn": "اسم العميل بالانجليزية",
+  "boilerplate.containers.Payroll.projectManagment.customerNameAR": "اسم العميل بالعربية",
+  "boilerplate.containers.Payroll.projectManagment.customerPhone": "هاتف العميل",
+  "boilerplate.containers.Payroll.projectManagment.customerEmail": "بريد العميل الإلكتروني",
+  "boilerplate.containers.Payroll.projectManagment.customerWebsite": "موقع العميل",
+  "boilerplate.containers.Payroll.projectManagment.managerName": "اسم المدير",
+  "boilerplate.containers.Payroll.projectManagment.accountManagerEmail": "البريد الإلكتروني لمدير الحساب",
+  "boilerplate.containers.Payroll.projectManagment.accountManagerJobTitle": "المسمى الوظيفي لمدير الحسابات",
+  "boilerplate.containers.Payroll.projectManagment.customerAddress": "عنوان العميل",
+  "boilerplate.containers.Payroll.projectManagment.contractCode": "كود العقد",
+  "boilerplate.containers.Payroll.projectManagment.editContract": "تعديل العقد",
+  "boilerplate.containers.Payroll.projectManagment.createContract": "إنشاء عقد",
+  "boilerplate.containers.Payroll.projectManagment.contractValue": "قيمة العقد",
+  "boilerplate.containers.Payroll.projectManagment.stageCode": "كود المرحلة",
+  "boilerplate.containers.Payroll.projectManagment.stageNameEN": "اسم المرحلة بالانجليزية",
+  "boilerplate.containers.Payroll.projectManagment.stageNameAr": "اسم المرحلة بالعربية",
+  "boilerplate.containers.Payroll.projectManagment.tasksFillFieldsErr": "لا يمكنك إنشاء مهمة جديدة قبل ملء جميع حقول المهمة",
+  "boilerplate.containers.Payroll.projectManagment.stageName": "اسم المرحلة",
+  "boilerplate.containers.Payroll.projectManagment.taskName": "اسم المهمة",
+  "boilerplate.containers.Payroll.projectManagment.editTimeSheet": "تعديل ساعات العمل",
+  "boilerplate.containers.Payroll.projectManagment.createTimeSheet": "إنشاء ساعات العمل",
+  "boilerplate.containers.Payroll.projectManagment.AttendenceDate": "التاريخ",
+  "boilerplate.containers.Payroll.projectManagment.FromHours": "من الساعه",
+  "boilerplate.containers.Payroll.projectManagment.ToHours": "الى الساعه",
+  "boilerplate.containers.Payroll.projectManagment.NumberOfMinutes": "عدد الدقائق",
+  "boilerplate.containers.Payroll.projectManagment.ActivityCode": "كود النشاط",
+  "boilerplate.containers.Payroll.projectManagment.timeSheetDetails": "تفاصيل ساعات العمل"
+  
 }
