--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -451,7 +451,7 @@
   "boilerplate.components.Widgets.CounterChartWidget.weekly_sales": "Weekly Sales",
   "boilerplate.components.Widgets.CounterIconWidget.Employee": "Employees",
   "boilerplate.components.Widgets.CounterIconWidget.followers": "Followers",
-  "boilerplate.components.Widgets.CounterIconWidget.inPropation": "In Propation",
+  "boilerplate.components.Widgets.CounterIconWidget.inPropation": "In Bropation",
   "boilerplate.components.Widgets.CounterIconWidget.newHired": "New Hired",
   "boilerplate.components.Widgets.CounterIconWidget.resignation": "Resignation",
   "boilerplate.components.Widgets.CounterIconWidget.subscribers": "Subscribers",
@@ -2965,5 +2965,65 @@
   "boilerplate.containers.Users.Greeting.subtitle": "Just register to join with us",
   "boilerplate.containers.Users.Greeting.title": "Hello, nice to meet you",
   "boilerplate.containers.Users.Welcome.subtitle": "Please sign in to continue",
-  "boilerplate.containers.Users.Welcome.title": "Welcome to"
+  "boilerplate.containers.Users.Welcome.title": "Welcome to",
+
+
+  "boilerplate.containers.Payroll.projectManagment.createProject": "Create Project",
+  "boilerplate.containers.Payroll.projectManagment.editProject": "Edit Project",
+  "boilerplate.containers.Payroll.projectManagment.ProjectCode": "Project Code",
+  "boilerplate.containers.Payroll.projectManagment.ProjectType": "Project Type",
+  "boilerplate.containers.Payroll.projectManagment.Contract": "Contract",
+  "boilerplate.containers.Payroll.projectManagment.expectedWorkHours": "Expected Work Hours",
+  "boilerplate.containers.Payroll.projectManagment.expectedCost": "Expected Cost",
+  "boilerplate.containers.Payroll.projectManagment.expectedStartDate": "Expected Start Date",
+  "boilerplate.containers.Payroll.projectManagment.expectedEndDate": "Expected End Date",
+  "boilerplate.containers.Payroll.projectManagment.actualWorkHours": "Actual Work Hours",
+  "boilerplate.containers.Payroll.projectManagment.actualCost": "Actual Cost",
+  "boilerplate.containers.Payroll.projectManagment.profitMargin": "Profit Margin",
+  "boilerplate.containers.Payroll.projectManagment.Stage": "Stage",
+  "boilerplate.containers.Payroll.projectManagment.Stages": "Stages",
+  "boilerplate.containers.Payroll.projectManagment.startDate": "Start Date",
+  "boilerplate.containers.Payroll.projectManagment.endDate": "End Date",
+  "boilerplate.containers.Payroll.projectManagment.stageWorkHours": "Stage Work Hours",
+  "boilerplate.containers.Payroll.projectManagment.Tasks": "Tasks",
+  "boilerplate.containers.Payroll.projectManagment.TaskCode": "Task Code",
+  "boilerplate.containers.Payroll.projectManagment.TaskNameEN": "Task Name EN",
+  "boilerplate.containers.Payroll.projectManagment.TaskNameAR": "Task Name AR",
+  "boilerplate.containers.Payroll.projectManagment.TaskWorkHours": "Task Work Hours",
+  "boilerplate.containers.Payroll.projectManagment.organization": "Organization",
+  "boilerplate.containers.Payroll.projectManagment.Job": "Job",
+  "boilerplate.containers.Payroll.projectManagment.ProjectName": "Project Name",
+  "boilerplate.containers.Payroll.projectManagment.customerName": "Customer Name",
+  "boilerplate.containers.Payroll.projectManagment.youMustToAddTasks": "You Must To Add Tasks",
+  "boilerplate.containers.Payroll.projectManagment.customerCode": "Customer Code",
+  "boilerplate.containers.Payroll.projectManagment.accountManagerName": "Account Manager Name",
+  "boilerplate.containers.Payroll.projectManagment.accountManagerMobileNumber": "Account Manager Mobile Number",
+  "boilerplate.containers.Payroll.projectManagment.editCustomer": "Edit Customer",
+  "boilerplate.containers.Payroll.projectManagment.createCustomer": "Create Customer",
+  "boilerplate.containers.Payroll.projectManagment.customerNameEn": "Customer Name En",
+  "boilerplate.containers.Payroll.projectManagment.customerNameAR": "Customer Name Ar",
+  "boilerplate.containers.Payroll.projectManagment.customerPhone": "Customer Phone",
+  "boilerplate.containers.Payroll.projectManagment.customerEmail": "Customer Email",
+  "boilerplate.containers.Payroll.projectManagment.customerWebsite": "Customer Website",
+  "boilerplate.containers.Payroll.projectManagment.managerName": "Manager Name",
+  "boilerplate.containers.Payroll.projectManagment.accountManagerEmail": "Account Manager Email",
+  "boilerplate.containers.Payroll.projectManagment.accountManagerJobTitle": "Account Manager Job Title",
+  "boilerplate.containers.Payroll.projectManagment.customerAddress": "Customer Address",
+  "boilerplate.containers.Payroll.projectManagment.contractCode": "Contract Code",
+  "boilerplate.containers.Payroll.projectManagment.editContract": "Edit Contract",
+  "boilerplate.containers.Payroll.projectManagment.createContract": "Create Contract",
+  "boilerplate.containers.Payroll.projectManagment.contractValue": "Contract Value",
+  "boilerplate.containers.Payroll.projectManagment.stageCode": "Stage Code",
+  "boilerplate.containers.Payroll.projectManagment.stageNameEN": "Stage Name EN",
+  "boilerplate.containers.Payroll.projectManagment.stageNameAr": "Stage Name AR",
+  "boilerplate.containers.Payroll.projectManagment.tasksFillFieldsErr": "You can not create new task before fill all task fields",
+  "boilerplate.containers.Payroll.projectManagment.stageName": "Stage Name",
+  "boilerplate.containers.Payroll.projectManagment.taskName": "Task Name",
+  "boilerplate.containers.Payroll.projectManagment.editTimeSheet": "Edit TimeSheet",
+  "boilerplate.containers.Payroll.projectManagment.createTimeSheet": "Create TimeSheet",
+  "boilerplate.containers.Payroll.projectManagment.AttendenceDate": "Attendence Date",
+  "boilerplate.containers.Payroll.projectManagment.FromHours": "From Hours",
+  "boilerplate.containers.Payroll.projectManagment.ToHours": "To Hours",
+  "boilerplate.containers.Payroll.projectManagment.NumberOfMinutes": "To Hours",
+  "boilerplate.containers.Payroll.projectManagment.timeSheetDetails": "TimeSheet Details"
 }
