--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1361,6 +1361,7 @@
   "boilerplate.containers.Payroll.Attendance.workLeaveHours": "work + Leave Hours",
   "boilerplate.containers.Payroll.Attendance.worKNighDayVal": "Day Element value",
   "boilerplate.containers.Payroll.Attendance.worKNighElem": "Night Element",
+  "boilerplate.containers.Payroll.Attendance.LocationList": "Location List",
   "boilerplate.containers.Payroll.august": "August",
   "boilerplate.containers.Payroll.balance": "Balance",
   "boilerplate.containers.Payroll.bank": "Bank",
