finish add review into Detailed Attendance Report page

--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -984,6 +984,7 @@
   "boilerplate.containers.Payroll.Attendance.department": "القسم",
   "boilerplate.containers.Payroll.Attendance.DetailedAttendanceAndLeaveReport": "تقرير الحضور و الانصراف التفصيلي",
   "boilerplate.containers.Payroll.Attendance.DetailedAttendanceReport": "تقرير الحضور والانصراف التفصيلى",
+  "boilerplate.containers.Payroll.Attendance.printAndReviewErrMess": "يجب عليك اختيار نوع الطباعة والاستعراض أولاً",
   "boilerplate.containers.Payroll.Attendance.details": "تفصيلي",
   "boilerplate.containers.Payroll.Attendance.detailsSearch": "بحث تفصيلى",
   "boilerplate.containers.Payroll.Attendance.device": "اسم الجهاز",
@@ -1213,8 +1214,8 @@
   "boilerplate.containers.Payroll.Attendance.planedAtt": "الحضور المخطط",
   "boilerplate.containers.Payroll.Attendance.port": "البورت",
   "boilerplate.containers.Payroll.Attendance.postToPayroll": "ترحيل الرواتب",
-  "boilerplate.containers.Payroll.Attendance.PrintByDate": "طباعة بالتاريخ",
-  "boilerplate.containers.Payroll.Attendance.PrintByEmployee": "طباعة بالموظف",
+  "boilerplate.containers.Payroll.Attendance.ByDate": "بالتاريخ",
+  "boilerplate.containers.Payroll.Attendance.ByEmployee": "بالموظف",
   "boilerplate.containers.Payroll.Attendance.PrintDate": "تاريخ الطباعة",
   "boilerplate.containers.Payroll.Attendance.printPicture": "طباعة صورة",
   "boilerplate.containers.Payroll.Attendance.printTime": "وقت الطباعة",
