--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -984,6 +984,7 @@
   "boilerplate.containers.Payroll.Attendance.department": "Department",
   "boilerplate.containers.Payroll.Attendance.DetailedAttendanceAndLeaveReport": "Detailed attendance and leave report",
   "boilerplate.containers.Payroll.Attendance.DetailedAttendanceReport": "Detailed Attendance Report",
+  "boilerplate.containers.Payroll.Attendance.printAndReviewErrMess": "You must to choose print and review type first",
   "boilerplate.containers.Payroll.Attendance.details": "Details",
   "boilerplate.containers.Payroll.Attendance.detailsSearch": "Details Search",
   "boilerplate.containers.Payroll.Attendance.device": "Device",
@@ -1213,8 +1214,8 @@
   "boilerplate.containers.Payroll.Attendance.planedAtt": "Planed",
   "boilerplate.containers.Payroll.Attendance.port": "Port",
   "boilerplate.containers.Payroll.Attendance.postToPayroll": "Post to Payroll",
-  "boilerplate.containers.Payroll.Attendance.PrintByDate": "Print By Date",
-  "boilerplate.containers.Payroll.Attendance.PrintByEmployee": "Print By Employee",
+  "boilerplate.containers.Payroll.Attendance.ByDate": "By Date",
+  "boilerplate.containers.Payroll.Attendance.ByEmployee": "By Employee",
   "boilerplate.containers.Payroll.Attendance.PrintDate": "Print Date",
   "boilerplate.containers.Payroll.Attendance.printPicture": "Print Picture",
   "boilerplate.containers.Payroll.Attendance.printTime": "print Time",
