--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2093,6 +2093,7 @@
   "boilerplate.containers.Payroll.numberOfMinutesMustBeGreaterThanZero": "عدد الدقائق يجب ان يكون اكبر من صفر",
   "boilerplate.containers.Payroll.october": "أكتوبر",
   "boilerplate.containers.Payroll.of": "من",
+  "boilerplate.containers.Payroll.pageUnderConstruction": "الصفحة تحت الانشاء",
   "boilerplate.containers.Payroll.oldElemVal": "القيمة السابقة",
   "boilerplate.containers.Payroll.organizationName": "القسم",
   "boilerplate.containers.Payroll.organizationTree": "الهيكل التنظيمي للمنظمة",
