--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2595,6 +2595,8 @@
   "boilerplate.containers.Payroll.Setting.pleaseSelectEmployee": "Please Select Employee",
   "boilerplate.containers.Payroll.Setting.portallink": "Port Link",
   "boilerplate.containers.Payroll.Setting.portno": "Port No",
+  "boilerplate.containers.Payroll.Setting.Test": "Test",
+  "boilerplate.containers.Payroll.Setting.mailTest": "Mail Test",
   "boilerplate.containers.Payroll.Setting.print": "Print",
   "boilerplate.containers.Payroll.Setting.printForm": "Print Form",
   "boilerplate.containers.Payroll.Setting.resetallpassword": "Reset All",
