--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2931,6 +2931,7 @@
   "boilerplate.containers.Payroll.weekDayName": "اليوم",
   "boilerplate.containers.Payroll.Workflow.actionType": "القرار",
   "boilerplate.containers.Payroll.Workflow.approval": "الموافقة",
+  "boilerplate.containers.Payroll.Workflow.level": "المستوى",  
   "boilerplate.containers.Payroll.Workflow.documentName": "اسم الملف",
   "boilerplate.containers.Payroll.Workflow.documentType": "نوع الملف",
   "boilerplate.containers.Payroll.Workflow.nextStep": "المرحلة التالية",
