--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -451,7 +451,7 @@
   "boilerplate.components.Widgets.CounterChartWidget.weekly_sales": "Weekly Sales",
   "boilerplate.components.Widgets.CounterIconWidget.Employee": "Employees",
   "boilerplate.components.Widgets.CounterIconWidget.followers": "Followers",
-  "boilerplate.components.Widgets.CounterIconWidget.inPropation": "In Bropation",
+  "boilerplate.components.Widgets.CounterIconWidget.inProbation": "In Probation",
   "boilerplate.components.Widgets.CounterIconWidget.newHired": "New Hired",
   "boilerplate.components.Widgets.CounterIconWidget.resignation": "Resignation",
   "boilerplate.components.Widgets.CounterIconWidget.subscribers": "Subscribers",
