--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -1478,6 +1478,7 @@
   "boilerplate.containers.Payroll.Employee.bankEmployeeCode": "كود الموظف",
   "boilerplate.containers.Payroll.Employee.branchNumber": "رقم الفرع",
   "boilerplate.containers.Payroll.Employee.businessUnit": "وحدات عمل",
+  "boilerplate.containers.Payroll.Employee.birthDateValidationErrMess": "يجب ألا يقل العمر عن 16 عامًا",
   "boilerplate.containers.Payroll.Employee.car.carModel": "موديل السيارة",
   "boilerplate.containers.Payroll.Employee.car.hasLicense": "يوجد رخصة قيادة",
   "boilerplate.containers.Payroll.Employee.car.licenseGrade": "درجة الرخصة",
