finish update translation in DetailedAttendanceReport print and review, add mission details popup into Missions List, update style for popup in general

--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -984,7 +984,10 @@
   "boilerplate.containers.Payroll.Attendance.department": "القسم",
   "boilerplate.containers.Payroll.Attendance.DetailedAttendanceAndLeaveReport": "تقرير الحضور و الانصراف التفصيلي",
   "boilerplate.containers.Payroll.Attendance.DetailedAttendanceReport": "تقرير الحضور والانصراف التفصيلى",
-  "boilerplate.containers.Payroll.Attendance.printAndReviewErrMess": "يجب عليك اختيار نوع الطباعة والاستعراض أولاً",
+  "boilerplate.containers.Payroll.Attendance.printAndReviewErrMess": "يجب عليك الاختيار بالموظف أو بالتاريخ أولاً قبل الطباعة أو المراجعة",
+  "boilerplate.containers.Payroll.Attendance.missionDetails": "تفاصيل المأمورية",
+  "boilerplate.containers.Payroll.Attendance.StartAddress": "عنوان البدء",
+  "boilerplate.containers.Payroll.Attendance.EndAddress": "عنوان الانتهاء",
   "boilerplate.containers.Payroll.Attendance.details": "تفصيلي",
   "boilerplate.containers.Payroll.Attendance.detailsSearch": "بحث تفصيلى",
   "boilerplate.containers.Payroll.Attendance.device": "اسم الجهاز",
@@ -1045,6 +1048,8 @@
   "boilerplate.containers.Payroll.Attendance.idealManPower": "قوة العمالة المخططه",
   "boilerplate.containers.Payroll.Attendance.IncludeLeavesAndShiftLeaves": "يشمل الاجازات و اجازات الدوامات",
   "boilerplate.containers.Payroll.Attendance.includingEmployeesWithoutAttendanceRule": "يشمل الموظفين الذين لا تنطبق عليهم القواعد",
+  "boilerplate.containers.Payroll.Attendance.detailedAttendanceWeekend": "راحة",
+  "boilerplate.containers.Payroll.Attendance.detailedAttendanceWeekendFooter": "الراحة الاسبوعية",
   "boilerplate.containers.Payroll.Attendance.InFromDate": "تقدم فى نفس اليوم",
   "boilerplate.containers.Payroll.Attendance.init_RepVacBalance_EveryMonth": "تحويل بدل الراحة لوقت اضافى",
   "boilerplate.containers.Payroll.Attendance.InsuranceNo": "الرقم التامينى",
@@ -1173,6 +1178,7 @@
   "boilerplate.containers.Payroll.Attendance.overnightAllowance": "حساب بدل السهر - مرتبات",
   "boilerplate.containers.Payroll.Attendance.OverTiemRules": "محددات الوقت الاضافى",
   "boilerplate.containers.Payroll.Attendance.OverTime": "الوقت الاضافى - ق",
+  "boilerplate.containers.Payroll.Attendance.detailedAttendanceOverTime": "الاضافى",
   "boilerplate.containers.Payroll.Attendance.overTime": "اضافى",
   "boilerplate.containers.Payroll.Attendance.overTimeAppr": "تقريب الاضافى لاقرب ساعه",
   "boilerplate.containers.Payroll.Attendance.overTimeApprDown": "تقريب الاضافى لاقل نصف ساعه",
