--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -984,7 +984,10 @@
   "boilerplate.containers.Payroll.Attendance.department": "Department",
   "boilerplate.containers.Payroll.Attendance.DetailedAttendanceAndLeaveReport": "Detailed attendance and leave report",
   "boilerplate.containers.Payroll.Attendance.DetailedAttendanceReport": "Detailed Attendance Report",
-  "boilerplate.containers.Payroll.Attendance.printAndReviewErrMess": "You must to choose print and review type first",
+  "boilerplate.containers.Payroll.Attendance.printAndReviewErrMess": "You must to choose by employee or by date first before print or review",
+  "boilerplate.containers.Payroll.Attendance.missionDetails": "Mission Details",
+  "boilerplate.containers.Payroll.Attendance.StartAddress": "Start Address",
+  "boilerplate.containers.Payroll.Attendance.EndAddress": "End Address",
   "boilerplate.containers.Payroll.Attendance.details": "Details",
   "boilerplate.containers.Payroll.Attendance.detailsSearch": "Details Search",
   "boilerplate.containers.Payroll.Attendance.device": "Device",
@@ -1045,6 +1048,8 @@
   "boilerplate.containers.Payroll.Attendance.idealManPower": "ideal ManPower",
   "boilerplate.containers.Payroll.Attendance.IncludeLeavesAndShiftLeaves": "Include Leaves And Shift Leaves",
   "boilerplate.containers.Payroll.Attendance.includingEmployeesWithoutAttendanceRule": "Including Employees Without Attendance Rule",
+  "boilerplate.containers.Payroll.Attendance.detailedAttendanceWeekend": "Weekend",
+  "boilerplate.containers.Payroll.Attendance.detailedAttendanceWeekendFooter": "Weekend",
   "boilerplate.containers.Payroll.Attendance.InFromDate": "apply the same day",
   "boilerplate.containers.Payroll.Attendance.init_RepVacBalance_EveryMonth": "Transferring rest allowance to Overtime",
   "boilerplate.containers.Payroll.Attendance.InsuranceNo": "Insurance No",
@@ -1173,6 +1178,7 @@
   "boilerplate.containers.Payroll.Attendance.overnightAllowance": "Overnight Allowance",
   "boilerplate.containers.Payroll.Attendance.OverTiemRules": "OverTiem Rules",
   "boilerplate.containers.Payroll.Attendance.OverTime": "Over Time",
+  "boilerplate.containers.Payroll.Attendance.detailedAttendanceOverTime": "Over Time",
   "boilerplate.containers.Payroll.Attendance.overTime": "OverTime-MM",
   "boilerplate.containers.Payroll.Attendance.overTimeAppr": "Approximate the Overtime to nearest an hour",
   "boilerplate.containers.Payroll.Attendance.overTimeApprDown": "Approximate the Overtime to at least half an hour",
