finish add new field AreaCode into  DeviceCreate page, fix year and month into  SalaryCalculation page , add and fix open month into SalaryComparisonReport - SalaryYearReport - TotalDeptSalaryReport - TaxReportReport - AnnualTaxReport - BankList - FollowEmployee - SalaryReport - LoanReport - SalarySigningListReport - ElementReview - DetailedPayrollReport - SummaryPayslip - MonthlyVariablesReport

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1125,6 +1125,7 @@
   "boilerplate.containers.Payroll.Attendance.maxRepeated": "الحد الاقصى للتكرار",
   "boilerplate.containers.Payroll.Attendance.maxRepeatedPermissionIs": "الحد الأقصى للإذن المتكرر هو",
   "boilerplate.containers.Payroll.Attendance.method": "طريفة السحب",
+  "boilerplate.containers.Payroll.Attendance.AreaCode": "كود المنطقة",
   "boilerplate.containers.Payroll.Attendance.MinDate": "اول تاريخ",
   "boilerplate.containers.Payroll.Attendance.minMinuteNo": "الحد الادنى للدقائق",
   "boilerplate.containers.Payroll.Attendance.minMinutesCountIs": "الحد الادنى لعدد الدقائق هو",
