--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2780,6 +2780,7 @@
   "boilerplate.containers.Payroll.vac.alternativeEmployeeName": "alternativeEmployee",
   "boilerplate.containers.Payroll.vac.alternativeTask": "alternative Task",
   "boilerplate.containers.Payroll.vac.annualBalance": "Annual Balance",
+  "boilerplate.containers.Payroll.vac.postedBalance": "Posted Balance",
   "boilerplate.containers.Payroll.vac.annualOpen": "Annual Open",
   "boilerplate.containers.Payroll.vac.appointmentDate": "Appointment Date",
   "boilerplate.containers.Payroll.vac.approvedEmp": "approved Employee",
