finish change translation of department to section , fix company with department compobox connect with change in TotalDeptSalaryReport page

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -733,7 +733,7 @@
   "boilerplate.containers.Payroll.assessment.currentSalary": "Current Salary",
   "boilerplate.containers.Payroll.assessment.date": "Date",
   "boilerplate.containers.Payroll.assessment.dateForCompletion": "Date For Completion",
-  "boilerplate.containers.Payroll.assessment.department": "Department",
+  "boilerplate.containers.Payroll.assessment.department": "Section",
   "boilerplate.containers.Payroll.assessment.departmentName": "Department Name",
   "boilerplate.containers.Payroll.assessment.departmentStructureStatus": "Department Structure Status",
   "boilerplate.containers.Payroll.assessment.description": "Description",
@@ -1565,7 +1565,7 @@
   "boilerplate.containers.Payroll.Employee.personal.companyName": "Medical Company",
   "boilerplate.containers.Payroll.Employee.personal.controlParameter": "Rules Template",
   "boilerplate.containers.Payroll.Employee.personal.creatResign": "Create Resign",
-  "boilerplate.containers.Payroll.Employee.personal.department": "Department",
+  "boilerplate.containers.Payroll.Employee.personal.department": "Section",
   "boilerplate.containers.Payroll.Employee.personal.employeeCode": "Employee Code",
   "boilerplate.containers.Payroll.Employee.personal.employeeCodeAlreadyExistReplacedWithNewCode": "Employee Code Already Exist, Replaced With New Code",
   "boilerplate.containers.Payroll.Employee.personal.EmployeeDataTitle": "Employee Data",
@@ -2107,7 +2107,7 @@
   "boilerplate.containers.Payroll.of": "Of",
   "boilerplate.containers.Payroll.pageUnderConstruction": "Page Under Construction",
   "boilerplate.containers.Payroll.oldElemVal": "Prev Value",
-  "boilerplate.containers.Payroll.organizationName": "Department",
+  "boilerplate.containers.Payroll.organizationName": "Section",
   "boilerplate.containers.Payroll.organizationTree": "Organization Tree",
   "boilerplate.containers.Payroll.Payroll.account": "Account",
   "boilerplate.containers.Payroll.Payroll.addElement2": "Add Elements",
