--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -1373,6 +1373,8 @@
   "boilerplate.containers.Payroll.Attendance.worKNighDayVal": "قيمة العنصر المقابلة لليوم",
   "boilerplate.containers.Payroll.Attendance.worKNighElem": "عنصر السهر",
    "boilerplate.containers.Payroll.Attendance.LocationList": "قائمة المواقع",
+   "boilerplate.containers.Payroll.Attendance.signDateTime": "وقت البصمة",
+   "boilerplate.containers.Payroll.Attendance.type": " نوع البصمة",
   "boilerplate.containers.Payroll.august": "أغسطس",
   "boilerplate.containers.Payroll.balance": "الرصيد",
   "boilerplate.containers.Payroll.bank": "بيانات البنك",
