add translation into ForgotFingerprintRequest pages

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1375,7 +1375,9 @@
   "boilerplate.containers.Payroll.Attendance.worKNighElem": "Night Element",
   "boilerplate.containers.Payroll.Attendance.LocationList": "Location List",
   "boilerplate.containers.Payroll.Attendance.signDateTime": "Sign Time",
-  "boilerplate.containers.Payroll.Attendance.type": "SignType",
+  "boilerplate.containers.Payroll.Attendance.type": "Sign Type",
+  "boilerplate.containers.Payroll.Attendance.ForgotFingerprintRequestCreateTitle": "Add Forgot Fingerprint Request",
+  "boilerplate.containers.Payroll.Attendance.ForgotFingerprintRequestUpdateTitle": "Update Forgot Fingerprint Request",
   "boilerplate.containers.Payroll.august": "August",
   "boilerplate.containers.Payroll.balance": "Balance",
   "boilerplate.containers.Payroll.bank": "Bank",
