--- a/app/translations/arKsa.json
+++ b/app/translations/arKsa.json
@@ -1376,6 +1376,8 @@
    "boilerplate.containers.Payroll.Attendance.LocationList": "قائمة المواقع",
    "boilerplate.containers.Payroll.Attendance.signDateTime": "وقت البصمة",
    "boilerplate.containers.Payroll.Attendance.type": " نوع البصمة",
+   "boilerplate.containers.Payroll.Attendance.ForgotFingerprintRequestCreateTitle": "إضافة طلب نسيان البصمة",
+   "boilerplate.containers.Payroll.Attendance.ForgotFingerprintRequestUpdateTitle": "تحديث طلب نسيان البصمة",
   "boilerplate.containers.Payroll.august": "أغسطس",
   "boilerplate.containers.Payroll.balance": "الرصيد",
   "boilerplate.containers.Payroll.bank": "بيانات البنك",
